# workflow

./: README.md  cabal.project  workflow.cabal
app/: Main.hs
src/: GenServer.hs  GenServerExample.hs  GenServerTH.hs  HasMember.hs  HasServer.hs  HasServerExample.hs  HasServerTH.hs  HasWorkGroup.hs  Master.hs  Metric.hs  Metrics.hs  MetricsExample.hs  MyLib.hs  T.hs  TH.hs  Type.hs  Util.hs  WorkFlow.hs
src/Example/: E1.hs  E2.hs  HasServerExample.hs  MetricsExample.hs  Type.hs
src/Example/Chart/: Type.hs
src/Example/Example1/: E1.hs  E2.hs  HasServerExample.hs  Servers.hs  Type.hs
