cabal-version:      2.4
name:               workflow
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             EMQ-YangM
maintainer:         yangm@emqx.io

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  WorkFlow
                    , Metric
                    , HasServer
                    , HasWorkGroup
                    , TH
                    , Type
                    , Util
                    , Example.Example1.HasServerExample
                    , Example.Example1.E1
                    , Example.Example1.E2
                    , Example.Example1.Type

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , text 
                    , time 
                    , fused-effects
                    , fused-effects-optics
                    , optics
                    , fused-effects-optics
                    , stm 
                    , containers
                    , vector
                    , random
                    , data-default-class
                    , template-haskell
                    , random
    hs-source-dirs:   src
    default-language: Haskell2010

executable workflow
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        workflow

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded

test-suite workflow-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.3.0
